--- a/Bascet/Style/bascet.css
+++ b/Bascet/Style/bascet.css
@@ -13,7 +13,7 @@ html {
 
 .bascet {
     width: 80rem;
-    height: 60rem;
+    min-height: 50rem;
     background-color: #fff;
     border-radius: 7px;
     font-family: 'Montserrat', sans-serif;
@@ -37,10 +37,11 @@ html {
     font-weight: 400;
     font-size: 1.5rem;
     padding: 0 3rem;
+    margin-bottom: 1.5rem;
 }
 
 .header-bascet-count {
-    margin: 0 5rem;
+    margin: 0 5.3rem;
 }
 
 .header-bascet-cross {
@@ -52,17 +53,105 @@ html {
     cursor: pointer;
 }
 
+.main-bascet {
+    display: flex;
+    flex-direction: column;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    font-size: 1.6rem;
+    color: #333;
+    gap: 1rem;
+}
 
+.card_bascet {
+    height: 12rem;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    border: 1px solid #d7d7d7;
+    position: relative;
+}
+
+.card_bascet_image{
+    width: 12rem;
+    height: 12rem;
+    margin-left: 1rem;
+}
+
+.card_bascet_image img{
+    width: 100%;
+}
+
+.card_bascet_group {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-left: 2rem;
+}
+
+.card_bascet_name {
+    width: 35rem;
+}
+
+.card_bascet_count {
+    height: 3rem;
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid #d7d7d7; 
+    margin-left: 8rem;
+}
+
+.btn_minus, .btn_plus {
+    width: 3rem;
+    height: 3rem;
+    font-size: 2rem;
+    cursor: pointer;
+    text-align: center;
+    background-color: #fff;
+    border: 0;
+    margin: 0;
+    padding: 0;
+}
+
+.count {
+    width: 3rem;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card_bascet_price {
+    font-weight: 600;
+    margin-left: 4rem;
+}
+
+.card_bascet_cross {
+    position: absolute;
+    top: 0.5rem;
+    right: 0.5rem;
+    cursor: pointer;
+}
+
+.card_bascet_cross img {
+    width: 15px;
+}
+
+.footer-bascet {
+    padding-top: 3rem;
+}
 
 .footer-bascet-group {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    margin-bottom: 2rem;
 }
 
 .footer-bascet-name {
     font-weight: 400;
     font-size: 1.5rem;
+    margin-right: 3rem;
 }
 
 .footer-bascet-price {
@@ -71,6 +160,10 @@ html {
     font-weight: 600;
     font-size: 2.2rem;
     padding: 0 3rem;
+}
+
+.footer-bascet-price span{
+    margin-right: 0.5rem;
 }
 
 .footer-bascet-button {
@@ -85,7 +178,7 @@ html {
     background-color: #8f1c24;
     padding: 0.7rem 2rem;
     font-weight: 500;
-    font-size: 2.2rem;
+    font-size: 2rem;
     color: #fff;
     cursor: pointer;
 }
