--- a/Style/style.css
+++ b/Style/style.css
@@ -155,8 +155,13 @@ a {
     margin: 1rem 0.5rem;
 }
 
-.price_start, .price_final {
+.price_min, .price_max {
     width: 5rem;
+}
+
+.reset {
+    display: none;
+    margin-top: 2rem;
 }
 
 .section-two {
@@ -238,7 +243,7 @@ a {
     align-items: center;
     margin: 3rem 0;
     background-color: #78181f;
-    border: 1px solid rgb(190, 169, 169);
+    border: 1px solid #c68286;
     border-radius: 8px;
     color: #fff;
     cursor: pointer;
