--- a/Style/media.css
+++ b/Style/media.css
@@ -1,9 +1,9 @@
 @media (max-width: 1050px) {
-    .header-navigation>ul {
+    .header_navigation>ul {
         padding: 0;
     }
 
-    .search-box {
+    .search_box {
         padding-left: 0;
         position: relative;
     }
@@ -12,13 +12,13 @@
         font-size: 2rem;        
     }
 
-    .footer-information {
+    .footer_information {
         width: 30rem;        
     }
 }
 
 @media (max-width: 990px) {
-    .header-navigation>ul>li {
+    .header_navigation>ul>li {
         font-weight: 600;
         font-size: 2.5em;        
     }
@@ -33,16 +33,16 @@
         height: 3rem;        
     }
 
-    .search-btn {       
+    .search_btn {       
         top: 0.5rem;        
     }
 
-    .search-btn img {
+    .search_btn img {
         width: 2rem;
         height: 2rem;   
     }
 
-    .logo-bascet {
+    .logo_bascet {
         width: 4rem;
         height: 4rem;
         padding-right: 2rem;
@@ -54,7 +54,7 @@
 }
 
 @media (max-width: 875px) {
-    .header-navigation>ul {
+    .header_navigation>ul {
         width: 30rem;
     }
 }
@@ -69,19 +69,19 @@
         width: 20rem;        
     }
 
-    .logo-bascet {
+    .logo_bascet {
         width: 3rem;
         height: 3rem;
     }
 
-    .logo-bascet-count {      
+    .logo_bascet_count {      
         left: 2.5rem;
         width: 1.2rem;
         height: 1.5rem;
         font-size: 1.2rem;
     }
 
-    .section-one {
+    .section_one {
         padding: 1rem;
     }
 
@@ -99,37 +99,37 @@
         text-align: center;     
     }
 
-    .footer-contacts {
+    .footer_contacts {
         grid-column: 1/2;
         grid-row: 1/2;
     }
 
-    .footer-messenger {
+    .footer_messenger {
         align-items: center;
         grid-column: 1/3;
         grid-row: 2/3;
     }
 
-    .footer-messenger li {
+    .footer_messenger li {
         margin: 0 1rem;
     }
 
-    .footer-information {
+    .footer_information {
         grid-column: 2/3;
         grid-row: 1/2;
     }
 
-    .footer-email, .footer-address {
+    .footer_email, .footer_address {
         display: block;
     }
 }
 
-@media (max-width: 700px) {
-    .filter-checkbox {
-        font-size: 1.6rem;
+@media (max-width: 705px) {
+    .filter_checkbox {
+        font-size: 1.8rem;
     }
 
     .price_min, .price_max {
-        width: 3rem;
+        width: 4rem;
     }
 }
