relocate bascet.index code to main index

--- a/Style/media.css
+++ b/Style/media.css
@@ -8,6 +8,10 @@
         position: relative;
     }
 
+    .search_btn {
+        left: 1rem;
+    }
+
     .footer {
         font-size: 2rem;        
     }
@@ -22,6 +26,10 @@
         font-weight: 600;
         font-size: 2.5em;        
     }
+
+    .header_logo {
+        height: 10rem;
+    }    
 
     #logo {        
         height: 10rem;
@@ -44,12 +52,28 @@
 
     .logo_bascet {
         width: 4rem;
-        height: 4rem;
-        padding-right: 2rem;
+        height: 4rem;        
     }
 
     .main {        
         font-size: 2.2rem;
+    }
+
+    .section_one {
+        height: 51%;
+        top: 105px;
+    }
+
+    .section_image img{
+        width: 70%;
+    }  
+    
+    .bascet {
+        width: 73rem;
+    }
+
+    .card_bascet_count {
+        margin-left: 1rem;
     }
 }
 
@@ -57,9 +81,59 @@
     .header_navigation>ul {
         width: 30rem;
     }
+
+    .section_image img{
+        width: 80%;
+    }
+
+    .bascet {
+        width: 65rem;
+    }
+
+    .header_bascet_name {        
+        font-size: 4rem;
+    }
+
+    .header_bascet_group {        
+        padding: 0 1.5rem;        
+    }
+
+    .header_bascet_count {
+        margin: 0 3rem;
+    }
+
+    .header_bascet_cross {
+        top: -15px;
+        width: 2rem;
+        height: 2rem;
+    }
+
+    .card_bascet_image {
+        width: 9rem;
+        height: 9rem;
+        margin-left: 1rem;
+    }
+
+    .card_bascet_count {
+        height: 2.5rem;
+    }
+
+    .btn_minus, .btn_plus, .count {
+        width: 2.5rem;
+        height: 2.5rem;
+    }
+
+    .card_bascet_price {
+        font-weight: 600;
+        margin-left: 2rem;
+    }
 }
 
 @media (max-width: 800px) {
+    .header_logo {
+        height: 8rem;
+    } 
+    
     #logo {        
         height: 8rem;  
         margin-right: 1rem;     
@@ -67,6 +141,15 @@
 
     .search {
         width: 20rem;        
+    }
+
+    .section_one {
+        height: 39%;
+        top: 85px;
+    }
+
+    .reset {
+        margin-top: 1rem;
     }
 
     .logo_bascet {
@@ -90,7 +173,33 @@
     }
 
     .cards {
-        justify-content: center;
+        margin-left: 26rem;
+    }
+
+    .section_information {
+        font-size: 2.2rem;
+    }
+
+    .product_name {        
+        padding-right: 1rem;
+    }      
+    
+    .bascet {
+        width: 55rem;
+    }
+
+    .card_bascet_image {
+        width: 9rem;
+        height: 9rem;
+        margin-left: 1rem;
+    }
+
+    .card_bascet_group {
+        width: 25rem;
+    }
+
+    .card_bascet_name {
+        width: 100%;
     }
 
     .footer {
@@ -124,12 +233,16 @@
     }
 }
 
-@media (max-width: 705px) {
+@media (max-width: 710px) {
     .filter_checkbox {
         font-size: 1.8rem;
     }
 
     .price_min, .price_max {
         width: 4rem;
+    }
+
+    .product_name {        
+        font-size: 2rem;
     }
 }
