--- a/Page/Style/product-page.css
+++ b/Page/Style/product-page.css
@@ -1,6 +1,28 @@
+.header_product {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: 'Montserrat', sans-serif;
+    color: #333;
+    box-shadow: 1px 1px 15px 0 #eee;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    overflow: hidden;
+    background-color: #fff;
+}
+
+.header_product_box {
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .product_page {
     width: 100%;
-    height: 42rem;
+    height: 100%;
     display: flex;
     justify-content: flex-start;
     font-family: 'Montserrat', sans-serif;
@@ -8,6 +30,10 @@
     font-size: 2.5rem;
     color: #333;
     margin: 0.5rem;
+}
+
+.product_logo_bascet {
+    padding-left: 10rem;
 }
 
 .section_image {
@@ -30,8 +56,12 @@
     margin: 1rem 0;  
 }
 
+.product_name {        
+    padding-right: 3rem;
+}
+
 .product_price {
-    margin-top: 2rem;
+    margin: 2rem 0;
     color: #93111a;
 }
 
@@ -92,7 +122,7 @@
     font-weight: 500;
     font-size: 1.6rem;
     text-align: justify;
-    padding-right: 3rem;
+    padding: 2rem 3rem 2rem 0;
 }
 
 .product_description span {
