--- a/Style/style.css
+++ b/Style/style.css
@@ -18,11 +18,16 @@ a {
 .header {
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     font-family: 'Montserrat', sans-serif;
     color: #333;
     box-shadow: 1px 1px 15px 0 #eee;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    overflow: hidden;
+    background-color: #fff;
 }
 
 .header_navigation {
@@ -45,15 +50,27 @@ a {
     padding: 0 15px;
 }
 
+.header_logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 13rem;
+}
+
 #logo {
     display: block;
-    height: 13rem;
-    margin: 0 2rem;
+    height: 100%;
     background-color: hsl(0, 0%, 90%);
 }
 
+.header_box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .search_box {
-    padding: 0 2.5rem;
+    padding: 0 4rem;
     position: relative;
 }
 
@@ -68,15 +85,14 @@ a {
     font-size: 1.5rem;
     color: #333;    
     margin: 0;
-    padding-left: 3rem;
+    padding: 0 0.5rem 0 4rem;
 }
 
 .search_btn {
     color: #333;
     position: absolute;
     top: 1rem;
-    right: 4rem;
-    cursor: pointer;
+    left: 5rem;
 }
 
 .search_btn img {
@@ -119,15 +135,22 @@ a {
     font-weight: 600;
     font-size: 2.5rem;
     color: #333;
-    margin: 0.5rem;
+    margin: 0;
+    background-color: #fff;
 }
 
 .section_one {
+    height: 42%;
     display: inherit;
     flex-direction: column;
     justify-content: start;
     box-shadow: 1px 1px 10px 0 #eee;
     padding: 2rem;
+    position: fixed;
+    transform: translate3d(0px, 0px, 0px);
+    top: 135px;
+    left: 8.8px;
+    background-color: #fff;
 }
 
 .filter_checkbox {
@@ -166,24 +189,28 @@ a {
 
 .section_two {
     width: 100%;
-    margin: 2rem;    
+    margin: 2rem;
 }
 
 .cards {
     display: flex;
+    align-items: flex-start;
+    margin-left: 30rem;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    gap: 2rem;
+    gap: 2rem;    
 }
 
 .card {
-    width: 30rem;
+    width: 28.5rem;
+    height: 62rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;    
     font-size: 2rem;
     box-shadow: 1px 1px 10px 0 #eee;
+    padding: 2rem;
 }
 
 .card_image {
@@ -257,6 +284,7 @@ a {
     font-size: 2.5rem;
     padding-top: 3rem;
     box-shadow: 1px 1px 15px 0 #eee;
+    background-color: #fff;
 }
 
 .footer_contacts {
