update html and css code

--- a/Style/style.css
+++ b/Style/style.css
@@ -276,7 +276,7 @@ a {
     cursor: pointer;
 }
 
-.footer {
+#footer {
     display: flex;
     justify-content: space-around;
     font-family: 'Montserrat', sans-serif;    
