--- a/Style/media.css
+++ b/Style/media.css
@@ -12,7 +12,7 @@
         left: 1rem;
     }
 
-    .footer {
+    #footer {
         font-size: 2rem;        
     }
 
@@ -202,7 +202,7 @@
         width: 100%;
     }
 
-    .footer {
+    #footer {
         display: grid;
         gap: 3rem;  
         text-align: center;     
